# serie

./: .env  .env_example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  team_dict.csv  team_name_dictionary.csv
_app/: main.py  test_ddd_structure.py  test_enhanced_system.py  test_migrations.py  test_prediction_workflow.py  test_services.py
_app/application/: __init__.py
_app/application/dto/: __init__.py  betting_dto.py  (+2 more)
_app/domain/: __init__.py  repositories.py
_app/infrastructure/: __init__.py
_app/presentation/: __init__.py
_app/shared/: __init__.py  exceptions.py  types.py  utils.py
app/: analysis_tools.py  backtest.py  backtesting.py  backtesting_validator.py  config.py  edge_calculations_and_manual_verification.py  ingestion.py  main.py  main_ddd.py  metrics.py  model_training.py  prediction.py  predictor.py  processing.py  soccerstats_scraper.py  stats.py  train_ml_predictor.py  zsd_benchmarking.py  zsd_integration.py  zsd_model.py  zsd_poisson_model.py
app/analysis/: betting.py
app/common/: config.py  ingestion.py  plotting.py  stats.py
app/managers/: model_manager.py
app/models/: core.py  optimizer.py  predictors.py  predictors_ml.py  zsd_model.py
app/tools/: merge_odds.py  team_dict_builder.py
app/utils/: config_manager.py  data_corrections.py  data_merging.py  datetime_helpers.py  odds_helpers.py  pipeline_config.py  team_name_dict_builder.py  team_name_normaliser.py  url_helpers.py
tests/: National-League_2025-2026.csv  match_schedule_generator.py  test_ingestion.py  test_stats.py  test_team_metrics.py
(+78 files in other folders)
