[project]
name = "serie"
version = "0.1.0"
description = "Generate time series soccer stats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.7.4",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pydoll-python>=2.12.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
]
